Archive2/41/4543e2c88f2881/output
main.cpp: In function 'int main()':
main.cpp:23:16: error: invalid conversion from 'int*' to 'int' [-fpermissive]
     b->Foo(ints);
                ^
main.cpp:15:10: note:   initializing argument 1 of 'virtual void B::Foo(int)'
     void Foo(int foo) override;
          ^
